# mc-skin-statue-builder

./: LICENSE  README.md  pyproject.toml
examples/: README.md  build_statue.py
src/mc_skin_statue/: __init__.py  __main__.py  block_palette.py  cli.py  litematica_writer.py  skin_parser.py  statue_builder.py
src/mc_skin_statue/data/: block_colors.json
tests/: test_block_palette.py  test_skin_parser.py  test_statue_builder.py
